# finalmq

./: .cproject  .gitignore  .project  CMakeLists.txt  Doxyfile.in  EXAMPLE_USAGE.cmake  LICENSE  README.md  common.mk  conanfile.py  finalmq.pc.in  finalmqConfig.cmake.in
.github/workflows/: build.yml  cmake.yml  codeql-analysis.yml
codegenerator/cpp/: cpp.js  cpp_cpp.ejs  cpp_h.ejs  helper.js
codegenerator/csharp/: csharp.js  csharp_cs.ejs  helper.js
codegenerator/hl7/: helper.js  hl7.js  hl7_fmq.ejs  options.json
codegenerator/proto/: helper.js  proto.ejs  proto.js
codegenerator/python/: helper.js  python.js  python_py.ejs
csharp/: .gitignore  Platform.cs  Poller.cs  SocketWrapper.cs  finalmq.csproj  finalmq.sln  finalmqcsharp.csproj  finalmqcsharp.sln
csharp/Properties/: AssemblyInfo.cs  Settings.Designer.cs
csharp/cs_prebuild/: CMakeLists.txt  prebuild.bat
csharp/helper/: Executor.cs  Platform.cs
csharp/poller/: Poller.cs
examples/: CMakeLists.txt
examples/cpp/experimental/http/: CMakeLists.txt
examples/cpp/helloworld/: CMakeLists.txt  helloworld.fmq  helloworld_client.cpp  helloworld_server.cpp
examples/cpp/hl7/: CMakeLists.txt  hl7.fmq  hl7_client.cpp  hl7_client2.cpp  hl7_server.cpp  hl7_server2.cpp  hl7options.json  hl7options2.json
examples/cpp/registry/: CMakeLists.txt  registry_client.cpp  registry_server.cpp
examples/cpp/restapi/: CMakeLists.txt  restapi.fmq  restapi_client.cpp  restapi_server.cpp
examples/cpp/timer/: CMakeLists.txt  timer.fmq  timer_client.cpp  timer_server.cpp
examples/cpp/timer/htdocs/: example.html  fmq.js  qt.html  timer.html
hl7def/: hl7.fmq
htdocs/: fmq.js  helloworld.html  hl7.html  logging.html  logging.js  loggingtable.html  processes.html  qt.html  qtobjecttree.html
inc/connectionhub/: ConnectionHub.h
inc/conversions/: Conversions.h  clzll.h  diyfp.h  dtoa.h  ieee754.h
inc/helpers/: BexDefines.h  CondVar.h  IOperatingSystem.h  IZeroCopyBuffer.h  OperatingSystem.h  SocketDescriptor.h  ZeroCopyBuffer.h  hybrid_ptr.h
inc/interfaces/: fmqreg.fmq
inc/json/: JsonBuilder.h  JsonParser.h
inc/logger/: LogStream.h  Logger.h
inc/metadata/: MetaData.h  MetaEnum.h  MetaField.h  MetaStruct.h  MetaType.h
inc/metadataserialize/: MetaDataExchange.h  StructsMetaData.h  metadata.json
inc/poller/: Poller.h  PollerImplEpoll.h  PollerImplSelect.h
inc/protocolconnection/: IProtocol.h  IProtocolSession.h  ProtocolFixHeaderHelper.h  ProtocolMessage.h  ProtocolSession.h  ProtocolSessionContainer.h  ProtocolSessionList.h
inc/protocols/: ProtocolDelimiter.h  ProtocolHeaderBinarySize.h  ProtocolStream.h
inc/remoteentity/: FmqRegistryClient.h  RemoteEntity.h  RemoteEntityContainer.h  RemoteEntityFormat.h  entitydata.fmq
inc/remoteobject/: RemoteObjectContainer.h
inc/serialize/: IParserVisitor.h  ParserConverter.h  ParserProcessDefaultValues.h
inc/serializejson/: ParserJson.h  SerializerJson.h
inc/serializeproto/: ParserProto.h  SerializerProto.h
inc/serializestruct/: ParserStruct.h  SerializerStruct.h  StructBase.h  StructFactoryRegistry.h
inc/serializevariant/: ParserVariant.h  SerializerVariant.h
inc/streamconnection/: AddressHelpers.h  ConnectionData.h  IMessage.h  OpenSsl.h  Socket.h  StreamConnection.h  StreamConnectionContainer.h
inc/variant/: IVariantValue.h  Variant.h  VariantValueConvert.h  VariantValueList.h  VariantValuePrimitive.h  VariantValuePrimitives.h  VariantValueRegisterConversions.h  VariantValueStruct.h  VariantValueTemplate.h  VariantValues.h
mock/: MockIHl7ParserVisitor.h  MockIJsonParserVisitor.h  MockIOperatingSystem.h  MockIParserVisitor.h  MockIProtocolCallback.h  MockIProtocolSessionCallback.h  MockIStreamConnection.h  MockIStreamConnectionCallback.h  MockIZeroCopyBuffer.h
services/: CMakeLists.txt
services/fmqfcgi/: CMakeLists.txt  fmqfcgi.cpp
services/fmqfcgi/config/: lighttpd.conf
services/fmqfcgi/config/conf.d/: fastcgi.conf
services/fmqfcgi/htdocs/: example.html  fmq.js  json2.js  performance.html  qt.html  timer.html
services/fmqreg/: CMakeLists.txt  fmqreg.cpp  registry.cpp  registry.h
services/loggingserver/: CMakeLists.txt  main.cpp
services/processserver/: CMakeLists.txt  defines.h  main.cpp  peercache.cpp  peercache.h  platformspecific.cpp  platformspecific.h  processes.cpp  processes.h  transactionbase.cpp  transactionbase.h  transactionstart.cpp  transactionstart.h  transactionstop.cpp  transactionstop.h  watchprocesses.cpp  watchprocesses.h
src/connectionhub/: ConnectionHub.cpp
src/helpers/: CondVar.cpp  Executor.cpp  File.cpp  OperatingSystem.cpp  PersistFile.cpp  SocketDecriptor.cpp  Utils.cpp  ZeroCopyBuffer.cpp  base64.cpp
src/hl7/: Hl7Builder.cpp  Hl7Parser.cpp
src/json/: JsonBuilder.cpp  JsonParser.cpp
src/jsonvariant/: JsonToVariant.cpp  VariantToJson.cpp
src/logger/: LogStream.cpp  Logger.cpp
src/metadata/: MetaData.cpp  MetaEnum.cpp  MetaStruct.cpp
src/metadataserialize/: MetaDataExchange.cpp  StructsMetaData.cpp  StructsMetadata.cpp
src/poller/: PollerImplEpoll.cpp  PollerImplSelect.cpp
src/protocolconnection/: ProtocolDelimiter.cpp  ProtocolFixHeaderHelper.cpp  (+5 more)
test/: CMakeLists.txt  createkeyandcert.sh  matchers.h  neu 11.txt  ssltest.cert.pem  ssltest.key.pem  test.fmq  test.fmq.cs  test.json  test.proto  testEpoll.cpp  testFmqRegistryClient.cpp  testHelper.cpp  testHelper.h  testHl7Builder.cpp  testHl7Parser.cpp  testIntegrationConnectionHub.cpp  testIntegrationEpoll.cpp  testIntegrationProtocolDelimiter.cpp  testIntegrationProtocolDelimiterSsl.cpp  testIntegrationProtocolHeaderBinarySize.cpp  testIntegrationProtocolHttp.cpp  testIntegrationProtocolStreamSessionContainer.cpp  testIntegrationRemoteEntity.cpp  testIntegrationSelect.cpp  testIntegrationStreamConnectionContainer.cpp  testIntegrationStreamConnectionContainerSsl.cpp  testJsonBuilder.cpp  testJsonParser.cpp  testJsonToVariant.cpp  testLogger.cpp  testMetaDataExchange.cpp  testParserHl7.cpp  testParserJson.cpp  testParserProto.cpp  testParserQt.cpp  testParserStruct.cpp  testParserVariant.cpp  testProtocolDelimiter.cpp  testProtocolHttp.cpp  (+17 more)
(+360 files in other folders)
